# droptc-dev

./: CLASS_IMBALANCE_HANDLER_IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt  run_efficiency_test.sh  save_best_model.sh  train_class_imbalance.sh  train_classifier.sh  train_embedding.sh
dataset/: test_problem_sentence.xlsx  test_sentence.xlsx  train_sentence.xlsx
experiments/analysis/: model_size.json
experiments/recap/: recap_overall_sentence_f1_score.xlsx
experiments/recap/sentence/: recap_overall_sentence_new.xlsx
notebooks/: case_study_analysis.ipynb  model_size.ipynb  overlap_analysis.ipynb  recap_experiment.ipynb  statistics_test.ipynb  visualize_efficiency_results.ipynb
scripts/: analyze_trust.py  evaluate_attributions.py  format_efficiency_results.py
src/: model_size.py
src/analysis/: model_size.py
src/cli/: config.json  main.py  postprocessing.py  preprocessing.py  utils.py
src/droptc/: efficiency_test.py  generate_heatmap.py  interpretability.py  model.py  train_classifier.py  train_embedding.py  utils.py
src/evidence/: README.md
src/evidence/decrypted/: DJIFlightRecord_2024-11-10_[03-09-29].csv  DJIFlightRecord_2025-05-12_[08-01-12].csv  DJIFlightRecord_2025-05-12_[08-20-56].csv  DJIFlightRecord_2025-06-27_[03-23-15].csv  DJIFlightRecord_2025-06-27_[03-27-42].csv  DJIFlightRecord_2025-06-27_[03-31-40].csv  DJIFlightRecord_2025-06-27_[03-34-35].csv  parse.py
src/evidence/parsed/: flight_log_1.xlsx  flight_log_2.xlsx  flight_log_3.xlsx  flight_log_4.xlsx  (+3 more)
visualization/trustworthiness/: confidence_statistical_test.xlsx
(+2931 files in other folders)
