[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "droptc"
version = "0.1.0"
description = "A tool to identify and classify problems on drone flight logs"
authors = [
    { name="Swardiantara Silalahi", email="swardyantara@gmail.com" }
]
dependencies = [
    "torch",
    "transformers",
    "pandas",
    "numpy",
]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
